# manufacturing-mas

./: .env.example  .gitignore  AI_MODELS_AND_AGENTS.md  ARCHITECTURE.md  CURRENT_SYSTEM_GUIDE.md  HOW_IT_WORKS.md  MAS_SYSTEM_REFERENCE.md  OVERVIEW.md  README.md  ROADMAP_ADVANCED_MAS.md  compare_results.py  main.py  pyproject.toml  requirements.txt  run_scenario.py
mas/: __init__.py  agent_protocol.py  agentic_loop.py  ai_tools.py  base_agent.py  broker.py  cnp_session.py  config.py  decision_router.py  demand.py  demand_agent.py  domain_inference.py  environment.py  equipment_agent.py  inventory.py  inventory_agent.py  llm.py  logger.py  logging_config.py  machines.py  manufacturing_env.py  message.py  mock_models.py  mqtt_bridge.py  optimization_engine.py  planning_agent.py  production.py  prompt_registry.py  quality_agent.py  scenario_runtime.py  snapshot_enrichment.py  sra_langgraph.py  supply_agent.py
scenarios/: compound_crisis.yaml  demand_surge.yaml  equipment_failure.yaml  normal.yaml  quality_crisis.yaml  supply_shortage.yaml
tests/: test_approval_api.py  test_broker.py  test_collaboration_view.py  test_compare_results.py  test_config.py  test_connector_registry.py  test_coordination_layer.py  test_dashboard_approval_ui.py  test_e2e_runtime.py  test_equipment_sub.py  test_event_engine.py  test_live_connectors.py  test_manufacturing_context.py  test_manufacturing_env.py  test_manufacturing_ids.py  test_mas_overview.py  test_mock_adapters.py  test_monitoring_qa.py  test_monitoring_schema_smoke.py  test_optimization_engine.py  test_roadmap_integration.py  (+3 more)
(+85 files in other folders)
